(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name posix_types)
 (public_name posix-types)
 (synopsis
   "posix-types provides access to POSIX's types defined in <sys/types.h>")
 (libraries ctypes posix-types.constants posix-base))

(rule
 (targets posix_types_generated_constants.ml)
 (action
  (with-stdout-to
   %{targets}
   (run ./generator/gen_constants_c))))
