(library
 (name posix_base)
 (public_name posix-base)
 (modules posix_base)
 (synopsis
  "posix-base provides the base tools to generate the various posix bindings")
 (libraries ctypes.stubs integers))

(executable
 (modules posix_base_dirname_internal)
 (name posix_base_dirname_internal))

(rule
 (target clibs_include_path)
 (action
  (with-stdout-to
   %{target}
   (run
    %{exe:posix_base_dirname_internal.exe}
    %{lib:ctypes:ctypes_cstubs_internals.h}))))
