(rule
 (targets test_get_system_value.ml)
 (deps
  (:gen ../src/generator/gen_get_system_value.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{gen}))))

(test
 (name test)
 (package posix-errno)
 (libraries posix-errno))

(test
 (name test_errno_defaults)
 (package posix-errno)
 (modules test_errno_defaults test_get_system_value)
 (libraries posix-errno errno_defaults unix))
