(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name posix_math)
 (public_name posix-math2)
 (synopsis "posix-math2 provides access to the features exposed in math.h")
 (foreign_stubs
  (language c)
  (names posix_math_generated_stubs))
 (libraries unix ctypes posix-math2.types posix-math2.stubs))

(rule
 (targets posix_math_generated_stubs.ml)
 (action
  (run ./generator/gen_stubs.exe ml %{targets})))

(rule
 (targets posix_math_generated_stubs.c)
 (action
  (run ./generator/gen_stubs.exe c %{targets})))
