(executable
 (name gen_types_c)
 (modules gen_types_c)
 (libraries posix-socket-unix.types ctypes.stubs))

(rule
 (targets gen_types.c)
 (action  (run ./gen_types_c.exe %{targets})))

(rule
 (targets gen_types_c)
 (deps    (:c_code ./gen_types.c))
 (action  (run %{ocaml-config:c_compiler} -I %{lib:ctypes:} -I %{ocaml-config:standard_library} -o %{targets} %{c_code})))

(executable
 (name gen_constants_c)
 (modules gen_constants_c)
 (libraries posix-socket-unix.constants ctypes.stubs))

(rule
 (targets gen_constants.c)
 (action  (run ./gen_constants_c.exe %{targets})))

(rule
 (targets gen_constants_c)
 (deps    (:c_code ./gen_constants.c))
 (action  (run %{ocaml-config:c_compiler} -I %{lib:ctypes:} -I %{ocaml-config:standard_library} -o %{targets} %{c_code})))
