(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name posix_socket)
 (public_name posix-socket)
 (synopsis
   "posix-socket provides access to the features exposed in sys/socket.h")
 (foreign_stubs
  (language c)
  (names posix_socket_generated_stubs))
 (libraries unix ctypes posix-socket.types posix-socket.stubs))

(rule
 (targets posix_socket_generated_stubs.ml)
 (deps
  (:exec ./generator/exec.sh)
  (:gen ./generator/gen_stubs.exe))
 (action
  (system "./%{exec} %{ocaml-config:system} ./%{gen} ml %{targets}")))

(rule
 (targets posix_socket_generated_stubs.c)
 (deps
  (:exec ./generator/exec.sh)
  (:gen ./generator/gen_stubs.exe))
 (action
  (system "./%{exec} %{ocaml-config:system} ./%{gen} c %{targets}")))
