(env
 (dev
  (flags
   (:standard -g -warn-error -A))))

(library
 (name posix_socket)
 (public_name posix-socket)
 (synopsis
  "posix-socket provides access to the features exposed in sys/socket.h")
 (foreign_stubs
  (language c)
  (names posix_socket_generated_stubs posix_socket_stubs)
  (extra_deps posix_socket_stubs.h))
 (libraries unix ctypes posix-socket.types posix-socket.stubs))

(rule
 (targets posix_socket_stubs.h)
 (action
  (run ./config/discover.exe)))

(rule
 (targets posix_socket_generated_stubs.ml)
 (action
  (run ./generator/gen_stubs.exe ml %{targets})))

(rule
 (targets posix_socket_generated_stubs.c)
 (action
  (run ./generator/gen_stubs.exe c %{targets})))
