(env
 (dev
  (flags
   (:standard -g -warn-error -A))))

(library
 (name posix_socket)
 (public_name posix-socket)
 (synopsis
  "posix-socket provides access to the features exposed in sys/socket.h")
 (foreign_stubs
  (language c)
  (names posix_socket_generated_stubs posix_socket_stubs)
  (extra_deps posix_socket_stubs.h))
 (libraries unix ctypes posix-socket.types posix-socket.stubs))

(rule
 (targets posix_socket_stubs.h)
 (action
  (run ./config/discover.exe)))

(rule
 (targets posix_socket_generated_stubs.ml)
 (action
  (run ./generator/gen_stubs.exe ml %{targets})))

(rule
 (targets posix_socket_generated_stubs.c)
 (action
  (run ./generator/gen_stubs.exe c %{targets})))

(rule
 (targets posix_eai_errno_is_native_impl.ml)
 (enabled_if
  (<> %{ocaml-config:host} %{ocaml-config:target}))
 (deps
  (:exec ../../posix-base/src/exec.sh)
  (:gen ./generator/target_is_native_detector.exe))
 (action
  (with-stdout-to
   %{targets}
   (system "%{exec} %{ocaml-config:system} %{gen}"))))

(rule
 (targets posix_eai_errno_is_native_impl.ml)
 (enabled_if
  (= %{ocaml-config:host} %{ocaml-config:target}))
 (deps
  (:gen ./generator/target_is_native_detector.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{gen}))))
