(env
  (dev
     (flags (:standard -warn-error -A))))

(library
 (name posix_socket_stubs)
 (public_name posix-socket.stubs)
 (libraries posix-socket.types ctypes.stubs))

(rule
 (targets posix_socket_generated_types.ml)
 (deps    (:exec ../generator/exec.sh)
          (:gen ../generator/gen_types_c))
 (action  (with-stdout-to %{targets}
            (system "%{exec} %{ocaml-config:system} %{gen}"))))
