(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name posix_time)
 (public_name posix-time2)
 (synopsis "posix-time2 provides access to POSIX's time-related APIs")
 (foreign_stubs
  (language c)
  (names posix_time_generated_stubs))
 (libraries unix unix-errno.unix ctypes posix-time2.types posix-time2.stubs))

(rule
 (targets posix_time_generated_stubs.ml)
 (action
  (run ./generator/gen_stubs.exe ml %{targets})))

(rule
 (targets posix_time_generated_stubs.c)
 (action
  (run ./generator/gen_stubs.exe c %{targets})))
