(rule
 (targets test_get_value.ml)
 (deps
  (:gen ../src/generator/gen_get_value.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{gen}))))

(executable
 (name test)
 (libraries posix-errno))

(rule
 (alias citest)
 (package posix-errno)
 (action
  (run %{exe:test.exe})))

(executable
 (name test_errno_defaults)
 (modules test_errno_defaults test_get_value)
 (libraries posix-errno errno_defaults unix))

(rule
 (alias citest)
 (package posix-errno)
 (action
  (run %{exe:test_errno_defaults.exe})))
