(executable
 (name test)
 (libraries posix-socket))

(rule
 (alias citest)
 (package posix-socket)
 (action
  (run %{exe:test.exe})))

(rule
 (targets test_get_value.ml)
 (deps
  (:gen ../src/generator/gen_get_value.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{gen}))))

(executable
 (name test_eai_errno_defaults)
 (modules test_eai_errno_defaults test_get_value)
 (libraries posix-socket eai_errno_defaults unix))

(rule
 (alias citest)
 (package posix-socket)
 (action
  (run %{exe:test_eai_errno_defaults.exe})))
